# climate-digital-twin

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
ai/: __init__.py
app/: __init__.py  main.py
app/components/: __init__.py  chart_widget.py  kpi_cards.py  map_widget.py  sidebar.py  timeline_widget.py
app/controllers/: __init__.py  dashboard_controller.py  decision_controller.py  prediction_controller.py  simulation_controller.py
app/pages/: 1_Dashboard.py  2_Climate_Map.py  3_Prediction.py  4_Simulation.py  5_Decision_Support.py  6_Explainability.py  7_Data_Explorer.py
app/state/: __init__.py  session_manager.py
climate/: __init__.py  state_manager.py
climate/assimilation/: __init__.py  assimilation_engine.py  bias_correction.py  confidence_estimator.py  observation_fusion.py
climate/versioning/: __init__.py  serialization.py  state_store.py
config/: __init__.py  constants.py  dataset_registry.py  dataset_registry.yaml  logging.yaml  model_registry.py  model_registry.yaml  paths.py  settings.py
core/: __init__.py
core/decision/: __init__.py
core/models/: __init__.py  climate_state.py  climate_variable.py  metadata.py  prediction.py  recommendation.py  region.py  risk_assessment.py  satellite_frame.py  simulation_scenario.py  weather_observation.py
core/registry/: __init__.py  region_registry.py
data/: __init__.py
data/catalog/: __init__.py
data/ingestion/: __init__.py  base.py  download_manager.py
data/preprocessing/: __init__.py  clipping.py  feature_engineering.py  interpolation.py  missing.py  normalization.py  pipeline.py  raster.py  readers.py  reprojection.py  resampling.py  state_builder.py  temporal.py
docker/: Dockerfile  docker-compose.yml
docs/architecture/: Climate_Digital_Twin_SAD.md
scripts/: download_datasets.py  seed_database.py  train_model.py
simulation/: __init__.py
storage/: __init__.py
storage/cache/: __init__.py  disk_cache.py  memory_cache.py  raster_cache.py
storage/db/: __init__.py  duckdb_connector.py  schema.sql
tests/: conftest.py
tests/unit/: test_assimilation_engine.py  test_bias_correction.py  test_cache.py  test_confidence_estimator.py  test_core_models.py  test_decorators.py  test_download_manager.py  test_duckdb_connector.py  test_exceptions.py  test_ingestion_connectors.py  test_observation_fusion.py  test_page_boundaries.py  test_processing_operations.py  test_processing_pipeline.py  test_raster.py  test_readers.py  test_region_registry.py  test_registries.py  test_state_builder.py  test_state_persistence.py  test_temporal_and_features.py  test_twin_state_manager.py
utils/: __init__.py  decorators.py  exceptions.py  geo_utils.py  logger.py  timer.py  validators.py
visualization/: __init__.py
(+14 files in other folders)
