[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-digital-twin"
version = "0.2.0"
description = "AI-Powered Digital Twin of India's Climate using National Datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Climate Digital Twin Team" }]

dependencies = [
    "streamlit>=1.37,<2.0",
    "torch>=2.3,<3.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "xarray>=2024.6.0",
    "rasterio>=1.3.10",
    "geopandas>=0.14.4",
    "shapely>=2.0.4",
    "duckdb>=1.0.0",
    "plotly>=5.22.0",
    "pydeck>=0.9.1",
    "folium>=0.16.0",
    "streamlit-folium>=0.21.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "PyYAML>=6.0.1",
    "requests>=2.32.3",
    "joblib>=1.4.2",
    "scikit-learn>=1.5.0",
    "netCDF4>=1.6.5",
    "pyarrow>=16.1.0",
    "zarr>=2.18.2",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.8",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "import-linter>=2.0",
    "types-PyYAML>=6.0.12.20240311",
    "types-requests>=2.32.0.20240602",
]

[tool.setuptools.packages.find]
include = ["app*", "core*", "climate*", "ai*", "simulation*", "visualization*", "data*", "storage*", "config*", "utils*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "app", "core", "climate", "ai", "simulation",
    "visualization", "data", "storage", "config", "utils",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "core", "climate", "ai", "simulation", "visualization", "data", "storage", "config", "utils", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.isort]
known-first-party = [
    "app", "core", "climate", "ai", "simulation",
    "visualization", "data", "storage", "config", "utils",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/fixtures", "build", "dist"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov=core --cov=climate --cov=ai --cov=simulation --cov=visualization --cov=data --cov=storage --cov=config --cov=utils --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
